--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,6 @@
   position: relative;
   width: 100%;
   height: 100%;
-  max-width: 1440px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -82,4 +81,19 @@ main {
 .avatar img {
   height: 250px;
   border-radius: 10px;
+}
+
+@media screen and (max-width: 425px) {
+  main {
+    flex-wrap: wrap-reverse;
+    justify-content: center;
+    height: 100%;
+    align-items: center;
+  }
+  .wrapper {
+    display: block;
+  }
+  .content {
+    min-width: 0;
+  }
 }
